--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,7 @@
-/*
-COLORS
+@import 'abstract/variables';
 
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
+@import 'base/base';
+@import 'base/typography';
 
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
+@import 'layouts/layouts';
+@import 'layouts/header';
