--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 .header{
 	height: 7rem;
 	background-color: #fff;
-	border-bottom: var(--color-grey-light-2);
+	border-bottom: 1px solid var(--color-grey-light-2);
 	font-size: 1.4rem;
 
 	display: flex;
