--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,10 @@
 
 @import 'base/base';
 @import 'base/typography';
+@import 'base/animations';
 
-@import 'layouts/layouts';
 @import 'layouts/header';
+@import 'layouts/sidebar';
+@import 'layouts/hotel-view';
+@import 'layouts/details';
+@import 'layouts/user-review';
