--- a/sass/layouts/_details.scss
+++ b/sass/layouts/_details.scss
@@ -3,13 +3,14 @@
 	padding: 4.5rem;
 	background-color: var(--color-grey-light-1);
 	border-bottom: 1px solid var(--color-grey-light-2);
+	font-size: 1.4rem;
+	color: var(--color-grey-dark-2);
 }
 
 .description{
 	background-color: #fff;
 	box-shadow: 0 2rem 5rem rgba(0,0,0,.06);
 	padding: 3rem;
-	font-size: 1.4rem;
 
 	flex: 0 0 60%;
 	margin-right: 4.5rem;
