--- a/sass/layouts/_hotel-view.scss
+++ b/sass/layouts/_hotel-view.scss
@@ -93,10 +93,19 @@
 	&:hover{
 		color: var(--color-grey-dark-1);
 		border-color: var(--color-grey-dark-1);
+
+		span {
+			margin-left: 8px;
+		}
 	}
 
 	&:focus{
 		outline: none;
 		animation: pulsate 1s infinite;
+	}
+
+	& span{
+		margin-left: 3px;
+		transition: margin-left .2s;
 	}
 }
