--- a/sass/layouts/_user-review.scss
+++ b/sass/layouts/_user-review.scss
@@ -1,5 +1,9 @@
 .user-review{
 	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .review{
