--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ Grey dark 3: #999
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -54,9 +57,17 @@ body {
   margin: 8rem auto;
   background-color: #fff;
   box-shadow: var(--shadow-dark); }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 56.25em) {
+    .content {
+      flex-direction: column; } }
 
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem; }
@@ -102,6 +113,11 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      height: 11rem;
+      align-content: space-around; } }
 
 .title {
   height: 3.5rem;
@@ -119,6 +135,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%;
+      background-color: var(--color-grey-light-2);
+      margin: 0 0rem;
+      justify-content: flex-start; } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -130,10 +153,17 @@ body {
     width: 90%;
     transition: all .2s;
     margin-right: -2.5rem; }
+    @media only screen and (max-width: 31.25em) {
+      .search__input {
+        margin-right: 0;
+        width: 90%; } }
     .search__input:focus {
       outline: none;
       width: 100%;
       background-color: var(--color-grey-light-3); }
+      @media only screen and (max-width: 31.25em) {
+        .search__input:focus {
+          width: 90%; } }
     .search__input::-webkit-input-placeholder {
       font-weight: 100;
       color: var(--color-grey-light-4); }
@@ -199,10 +229,21 @@ body {
   list-style: none;
   font-size: 1.4rem;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: .5rem; }
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item:not(:last-child) {
+          margin: 0;
+          border-right: 1px solid var(--color-grey-dark-3); } }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__item {
+        flex: 1; } }
   .side-nav__item::before {
     content: "";
     position: absolute;
@@ -228,17 +269,34 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     padding: 1.5rem 3rem; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        justify-content: center;
+        padding: 1.8rem; } }
+    @media only screen and (max-width: 31.25em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        flex-direction: column;
+        padding: 1.3rem .5rem; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
     fill: var(--color-grey-light-1);
     margin-right: 1.75rem; }
+    @media only screen and (max-width: 31.25em) {
+      .side-nav__icon {
+        width: 1.5rem;
+        height: 1.5rem;
+        margin-right: 0;
+        margin-bottom: .7rem; } }
 
 .legal {
   font-size: 1.2rem;
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .legal {
+      display: none; } }
 
 .jayli3:link, .jayli3:visited {
   color: #fff;
@@ -268,6 +326,10 @@ body {
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem; }
+    @media only screen and (max-width: 31.25em) {
+      .overview__heading {
+        font-size: 1.8rem;
+        padding: 1rem 2rem; } }
   .overview__stars {
     margin-right: auto;
     display: flex;
@@ -293,13 +355,22 @@ body {
     color: #fff;
     margin-left: 3rem;
     padding: 0 2.25rem; }
+    @media only screen and (max-width: 31.25em) {
+      .overview__rating {
+        padding: 0 1.5rem; } }
   .overview__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -3px; }
+    @media only screen and (max-width: 31.25em) {
+      .overview__rating-average {
+        font-size: 1.8rem; } }
   .overview__rating-count {
     font-size: .8rem;
     text-transform: uppercase; }
+    @media only screen and (max-width: 31.25em) {
+      .overview__rating-count {
+        font-size: .5rem; } }
 
 .btn-inline {
   border: none;
@@ -330,6 +401,13 @@ body {
   border-bottom: 1px solid var(--color-grey-light-2);
   font-size: 1.4rem;
   color: var(--color-grey-dark-2); }
+  @media only screen and (max-width: 56.25em) {
+    .details {
+      padding: 2rem; } }
+  @media only screen and (max-width: 39em) {
+    .details {
+      flex-direction: column;
+      align-items: center; } }
 
 .description {
   background-color: #fff;
@@ -337,6 +415,14 @@ body {
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .description {
+      padding: 2.5rem;
+      margin-right: 2rem; } }
+  @media only screen and (max-width: 39em) {
+    .description {
+      margin-right: 0;
+      margin-bottom: 2rem; } }
 
 .recommend {
   font-size: 1.3rem;
@@ -344,6 +430,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between; }
+  .recommend__friends {
+    display: flex; }
   .recommend__photo {
     box-sizing: content-box;
     border-radius: 50%;
@@ -351,7 +439,7 @@ body {
     width: 4rem;
     border: 3px solid #fff; }
     .recommend__photo:not(:last-of-type) {
-      margin-right: -1.5rem; }
+      margin-right: -2rem; }
 
 .user-review {
   flex: 1;
@@ -367,6 +455,10 @@ body {
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden; }
+  @media only screen and (max-width: 56.25em) {
+    .review {
+      padding: 2.5rem;
+      margin-bottom: 2rem; } }
   .review__text {
     margin-bottom: 2rem;
     position: relative;
@@ -406,6 +498,9 @@ body {
   text-align: center;
   padding: 3.5rem 0;
   background-color: #fff; }
+  @media only screen and (max-width: 56.25em) {
+    .cta {
+      padding: 2.5rem 2rem; } }
   .cta__text {
     text-transform: uppercase;
     font-size: 2rem;
