--- a/sass/layouts/_cta.scss
+++ b/sass/layouts/_cta.scss
@@ -3,6 +3,10 @@
 	padding: 3.5rem 0;
 	background-color: #fff;
 
+	@include respond(III){
+		padding: 2.5rem 2rem;
+	}
+
 	&__text{
 		text-transform: uppercase;
 		font-size: 2rem;
