--- a/sass/layouts/_details.scss
+++ b/sass/layouts/_details.scss
@@ -5,6 +5,15 @@
 	border-bottom: 1px solid var(--color-grey-light-2);
 	font-size: 1.4rem;
 	color: var(--color-grey-dark-2);
+
+	@include respond(III){
+		padding: 2rem;
+	}
+
+	@include respond(IIII){
+		flex-direction: column;
+		align-items: center;
+	}
 }
 
 .description{
@@ -14,6 +23,16 @@
 
 	flex: 0 0 60%;
 	margin-right: 4.5rem;
+
+	@include respond(III){
+		padding: 2.5rem;
+		margin-right: 2rem;
+	}
+
+	@include respond(IIII){
+		margin-right: 0;
+		margin-bottom: 2rem;
+	}
 }
 
 .recommend{
@@ -23,6 +42,10 @@
 	align-items: center;
 	justify-content: space-between;
 
+	&__friends{
+		display: flex;
+	}
+
 	&__photo{
 		box-sizing: content-box;
 		border-radius: 50%;
@@ -31,7 +54,7 @@
 		border: 3px solid #fff;
 
 		&:not(:last-of-type){
-			margin-right: -1.5rem;
+			margin-right: -2rem;
 		}
 	}
 }
