added old browser support

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,12 +28,15 @@
 		margin-right: .7rem;
 
 		//older browsers
-		//background-image: url(../img/svg/chevron-thin-right.svg);
-		//background-size: cover;
+		background-image: url(../img/svg/chevron-thin-right.svg);
+		background-size: cover;
 
-		background-color: var(--color-primary);
-		-webkit-mask-image: url(../img/svg/chevron-thin-right.svg);
-		-webkit-mask-size: cover;
-		mask-size: cover;
+		@supports(-webkit-mask-image: url()) or (mask-image: url()){
+			background-color: var(--color-primary);
+			-webkit-mask-image: url(../img/svg/chevron-thin-right.svg);
+			-webkit-mask-size: cover;
+			mask-size: cover;
+			background-image: none;
+		}
 	}
 }
