--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,15 @@ body {
     height: 1.2rem;
     width: 1.2rem;
     margin-right: .7rem;
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/svg/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-size: cover; }
+    background-image: url(../img/svg/chevron-thin-right.svg);
+    background-size: cover; }
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      .list__item::before {
+        background-color: var(--color-primary);
+        -webkit-mask-image: url(../img/svg/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-size: cover;
+        background-image: none; } }
 
 @keyframes pulsate {
   0% {
