added suggestions and popups

--- a/sass/layouts/_sidebar.scss
+++ b/sass/layouts/_sidebar.scss
@@ -25,7 +25,7 @@
 
 			@include respond(III){
 				margin: 0;
-				border-right: 1px solid var(--color-grey-dark-3);
+				border-right: .5px solid var(--color-grey-dark-3);
 			}
 		}
 
