--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,3 @@
-/*
-COLORS
-
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -139,7 +122,8 @@ body {
   flex: 0 0 40%;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  position: relative; }
   @media only screen and (max-width: 31.25em) {
     .search {
       order: 1;
@@ -190,6 +174,8 @@ body {
   align-items: center;
   align-self: stretch;
   color: var(--color-grey-dark-2); }
+  .user-nav__user {
+    position: relative; }
   .user-nav__icon-box, .user-nav__user {
     padding: 0 2rem;
     cursor: pointer;
@@ -218,7 +204,7 @@ body {
     justify-content: center;
     align-items: center; }
   .user-nav__user-photo {
-    height: 4rem;
+    height: 5rem;
     border-radius: 50%;
     margin-right: 1rem; }
 
@@ -245,7 +231,7 @@ body {
       @media only screen and (max-width: 56.25em) {
         .side-nav__item:not(:last-child) {
           margin: 0;
-          border-right: 1px solid var(--color-grey-dark-3); } }
+          border-right: 0.5px solid var(--color-grey-dark-3); } }
     @media only screen and (max-width: 56.25em) {
       .side-nav__item {
         flex: 1; } }
@@ -546,3 +532,153 @@ body {
     .cta__btn:focus {
       outline: none;
       animation: 1s pulsate infinite; }
+
+.suggestion {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 90%;
+  transform: translate(-50%, 0);
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  max-height: 36rem;
+  overflow: scroll;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s; }
+  .suggestion__item {
+    display: flex;
+    align-items: center;
+    padding: 1rem 1rem;
+    cursor: pointer; }
+    .suggestion__item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
+    .suggestion__item:hover {
+      background-color: var(--color-grey-light-1); }
+  .suggestion__photo-box {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 8rem;
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+    flex: 0 0 auto; }
+  .suggestion__photo {
+    height: 100%;
+    width: auto; }
+  .suggestion__info-box {
+    margin-right: auto; }
+  .suggestion__name {
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-bottom: -.5rem; }
+  .suggestion__location {
+    font-size: 1.2rem;
+    font-weight: 300; }
+  .suggestion__stars {
+    height: 1.5rem;
+    width: 1.5rem; }
+  .suggestion__rating-average {
+    color: var(--color-primary);
+    font-size: 2.6rem;
+    font-weight: 300;
+    margin-left: 1rem; }
+
+.search__input:focus ~ .suggestion {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav__icon-box:active .user-nav_chat,
+.user-nav__icon-box:hover .user-nav_chat {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav__user:active .user-nav_profile,
+.user-nav__user:hover .user-nav_profile {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav_chat {
+  background: #fff;
+  width: 30rem;
+  position: absolute;
+  right: -10rem;
+  top: 100%;
+  z-index: 100;
+  font-size: 1.2rem;
+  border-bottom: 2px solid var(--color-grey-light-2);
+  border-left: 2px solid var(--color-grey-light-2);
+  opacity: 0;
+  visibility: hidden; }
+  .user-nav_chat_head {
+    width: 100%;
+    text-align: center; }
+  .user-nav_chat_item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.3rem; }
+    .user-nav_chat_item:not(:last-child) {
+      margin-bottom: 1.5rem; }
+    .user-nav_chat_item:hover {
+      background-color: var(--color-grey-light-4); }
+  .user-nav_chat_photo {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
+  .user-nav_chat_info-box {
+    margin-right: auto; }
+  .user-nav_chat_name {
+    font-weight: 700; }
+
+.user-nav_profile {
+  background: #fff;
+  width: 20rem;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  z-index: 100;
+  font-size: 1rem;
+  border-bottom: 2px solid var(--color-grey-light-2);
+  border-left: 2px solid var(--color-grey-light-2);
+  opacity: 0;
+  visibility: hidden; }
+  .user-nav_profile_header {
+    width: 100%;
+    text-align: center;
+    font-size: 1.8rem;
+    align-self: stretch;
+    cursor: pointer; }
+  .user-nav_profile_item-box {
+    font-size: 2rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    cursor: pointer;
+    font-size: 1.5rem; }
+  .user-nav_profile_item {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    width: 100%;
+    align-items: center;
+    height: 5rem;
+    padding: 1rem; }
+    .user-nav_profile_item:hover {
+      background-color: var(--color-grey-light-4); }
+  .user-nav_profile_link {
+    text-decoration: none;
+    color: var(--color-primary-dark);
+    font-weight: 700; }
+  .user-nav_profile_icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--color-grey-dark-2);
+    margin-right: 1rem; }
