--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -34,6 +34,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 
 	@include respond(V){
 		order: 1;
@@ -100,10 +101,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	align-self: stretch;
-
 	color: var(--color-grey-dark-2);
+
+	&__user{
+		position: relative;
+	}
 
 	&__icon-box, &__user {
 		padding: 0 2rem;
@@ -144,7 +147,7 @@
 	}
 
 	&__user-photo{
-		height: 4rem;
+		height: 5rem;
 		border-radius: 50%;
 		margin-right: 1rem;
 	}
