--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,11 @@ body {
     right: 1.1rem;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    transition: all .15s; }
+  .user-nav__icon-box:hover .user-nav__notifications {
+    transform: scale(1.16);
+    background-color: var(--color-primary-light); }
   .user-nav__user-photo {
     height: 5rem;
     border-radius: 50%;
@@ -541,11 +545,13 @@ body {
   left: 50%;
   width: 90%;
   transform: translate(-50%, 0);
+  color: var(--color-grey-dark-2);
   background-color: #fff;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   max-height: 36rem;
-  overflow: scroll;
+  overflow-y: scroll;
+  z-index: 999;
   opacity: 0;
   visibility: hidden;
   transition: all .2s; }
@@ -603,82 +609,114 @@ body {
   visibility: visible; }
 
 .user-nav_chat {
-  background: #fff;
-  width: 30rem;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  right: -10rem;
   top: 100%;
-  z-index: 100;
-  font-size: 1.2rem;
-  border-bottom: 2px solid var(--color-grey-light-2);
-  border-left: 2px solid var(--color-grey-light-2);
+  left: 50%;
+  width: 90%;
+  transform: translate(-50%, 0);
+  color: var(--color-grey-dark-2);
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  max-height: 36rem;
+  overflow-y: scroll;
+  z-index: 999;
   opacity: 0;
-  visibility: hidden; }
+  visibility: hidden;
+  transition: all .2s;
+  width: 30rem;
+  max-height: 26rem; }
   .user-nav_chat_head {
+    font-size: 1.8rem;
     width: 100%;
     text-align: center; }
   .user-nav_chat_item {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0.3rem; }
+    padding: 1rem 1rem;
+    cursor: pointer;
+    position: relative; }
     .user-nav_chat_item:not(:last-child) {
-      margin-bottom: 1.5rem; }
+      border-bottom: 1px solid var(--color-grey-light-3); }
     .user-nav_chat_item:hover {
-      background-color: var(--color-grey-light-4); }
+      background-color: var(--color-grey-light-1); }
+    .user-nav_chat_item--highlighted::before {
+      content: "";
+      height: 100%;
+      width: 3px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: var(--color-primary-light); }
   .user-nav_chat_photo {
-    width: 3rem;
-    height: 3rem;
+    width: 3.5rem;
+    height: 3.5rem;
     border-radius: 50%;
     margin-right: 1rem; }
   .user-nav_chat_info-box {
     margin-right: auto; }
   .user-nav_chat_name {
-    font-weight: 700; }
+    font-size: 1.4rem;
+    font-weight: 400; }
+  .user-nav_chat_preview {
+    font-size: 1.2rem;
+    font-weight: 300; }
+  .user-nav_chat_timestamp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 1rem; }
 
 .user-nav_profile {
-  background: #fff;
-  width: 20rem;
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  right: 0;
   top: 100%;
-  z-index: 100;
-  font-size: 1rem;
-  border-bottom: 2px solid var(--color-grey-light-2);
-  border-left: 2px solid var(--color-grey-light-2);
+  right: 0;
+  width: 15rem;
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  overflow-y: scroll;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s;
+  max-height: none;
   opacity: 0;
   visibility: hidden; }
   .user-nav_profile_header {
-    width: 100%;
-    text-align: center;
     font-size: 1.8rem;
-    align-self: stretch;
-    cursor: pointer; }
+    width: 100%;
+    text-align: center; }
   .user-nav_profile_item-box {
     font-size: 2rem;
-    width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    flex-wrap: wrap;
-    cursor: pointer;
-    font-size: 1.5rem; }
+    flex-direction: column;
+    font-size: 1.4rem;
+    font-weight: 400; }
   .user-nav_profile_item {
     display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    width: 100%;
     align-items: center;
-    height: 5rem;
-    padding: 1rem; }
+    justify-content: flex-start;
+    padding: 1rem 1rem;
+    cursor: pointer;
+    width: 100%; }
+    .user-nav_profile_item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
     .user-nav_profile_item:hover {
-      background-color: var(--color-grey-light-4); }
-  .user-nav_profile_link {
+      background-color: var(--color-grey-light-1); }
+  .user-nav_profile_link:link, .user-nav_profile_link:visited {
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    color: var(--color-primary-dark);
-    font-weight: 700; }
+    color: var(--color-grey-dark-2); }
   .user-nav_profile_icon {
     width: 1.5rem;
     height: 1.5rem;
     fill: var(--color-grey-dark-2);
-    margin-right: 1rem; }
+    margin: auto 1rem; }
