--- a/sass/layouts/_suggestions.scss
+++ b/sass/layouts/_suggestions.scss
@@ -1,20 +1,26 @@
-.suggestion{
-	display: flex;
-	flex-direction: column;
-	position: absolute;
-	top: 100%;
-	left: 50%;
-	width: 90%;
-	transform: translate(-50%, 0);
-	background-color: #fff;
-	box-shadow: 0 2rem 4rem rgba(0,0,0,.3);
-	border-radius: 3px;
-	max-height: 36rem;
-	overflow: scroll;
+@mixin suggestion_styles{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 90%;
+    transform: translate(-50%, 0);
+    color: var(--color-grey-dark-2);
+    background-color: #fff;
+    box-shadow: 0 2rem 4rem rgba(0,0,0,.3);
+    border-radius: 3px;
+    max-height: 36rem;
+    overflow-y: scroll;
+    z-index: 999;
 
-	opacity: 0;
-	visibility: hidden;
-	transition: all .2s;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .2s;
+}
+
+.suggestion{
+	@include suggestion_styles;
 
 	&__item{
 		display: flex;
@@ -82,6 +88,8 @@
 
 
 
+
+
 .user-nav{
 
 	&__icon-box:active &_chat,
@@ -97,41 +105,47 @@
     }
 
 	&_chat {
-        background: #fff;
+        @include suggestion_styles;
         width: 30rem;
-        position: absolute;
-        right: -10rem;
-        top: 100%;
-        z-index: 100;
-        font-size: 1.2rem;
-        border-bottom: 2px solid var(--color-grey-light-2);
-        border-left: 2px solid var(--color-grey-light-2);
-        opacity: 0;
-        visibility: hidden;
+        max-height: 26rem;
 
         &_head {
+            font-size: 1.8rem;
             width: 100%;
             text-align: center;
         }
 
         &_item {
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            padding: 0.3rem;
+            padding: 1rem 1rem;
+            cursor: pointer;
+            position: relative;
 
             &:not(:last-child) {
-                margin-bottom: 1.5rem;
+                border-bottom: 1px solid var(--color-grey-light-3);
             }
 
             &:hover {
-                background-color: var(--color-grey-light-4);
+                background-color: var(--color-grey-light-1);
+            }
+
+            &--highlighted{
+                &::before{
+                    content: "";
+                    height: 100%;
+                    width: 3px;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    background-color: var(--color-primary-light);
+                }
             }
         }
 
         &_photo {
-            width: 3rem;
-            height: 3rem;
+            width: 3.5rem;
+            height: 3.5rem;
             border-radius: 50%;
             margin-right: 1rem;
         }
@@ -141,84 +155,95 @@
         }
 
         &_name {
-            font-weight: 700;
+            font-size: 1.4rem;
+            font-weight: 400;
         }
 
-        &_preview {}
+        &_preview {
+            font-size: 1.2rem;
+            font-weight: 300;
+        }
 
-        &_timestamp {}
-
-        &_time {}
-
-        &_date {}
+        &_timestamp {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            font-size: 1rem;
+        }
     }
 
 
     &_profile {
-        background: #fff;
-        width: 20rem;
+        display: flex;
+        flex-direction: column;
         position: absolute;
-        right: 0;
         top: 100%;
-        z-index: 100;
-        font-size: 1rem;
-        border-bottom: 2px solid var(--color-grey-light-2);
-        border-left: 2px solid var(--color-grey-light-2);
+        right: 0;
+        width: 15rem;
+        background-color: #fff;
+        box-shadow: 0 2rem 4rem rgba(0,0,0,.3);
+        border-radius: 3px;
+        overflow-y: scroll;
+        z-index: 999;
+        opacity: 0;
+        visibility: hidden;
+        transition: all .2s;
+        max-height: none;
+
         opacity: 0;
         visibility: hidden;
 
 
         &_header {
+            font-size: 1.8rem;
             width: 100%;
             text-align: center;
-            font-size: 1.8rem;
-            align-self: stretch;
-            cursor: pointer;
         }
 
         &_item-box {
             font-size: 2rem;
-            width: 100%;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             justify-content: center;
-            flex-wrap: wrap;
-            cursor: pointer;
-            font-size: 1.5rem;
-
-
+            flex-direction: column;
+            font-size: 1.4rem;
+            font-weight: 400;
         }
 
         &_item {
             display: flex;
-            flex-direction: column;
-            padding: 1rem;
-            width: 100%;
             align-items: center;
-            height: 5rem;
-            padding: 1rem;
+            justify-content: flex-start;
+            padding: 1rem 1rem;
+            cursor: pointer;
+            width: 100%;
+
+            &:not(:last-child) {
+                border-bottom: 1px solid var(--color-grey-light-3);
+            }
 
             &:hover {
-                background-color: var(--color-grey-light-4);
+                background-color: var(--color-grey-light-1);
             }
         }
 
         &_link {
-            text-decoration: none;
-            color: var(--color-primary-dark);
-            font-weight: 700;
 
+            &:link,
+            &:visited{
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+                color: var(--color-grey-dark-2);
+            }
         }
 
         &_icon {
             width: 1.5rem;
             height: 1.5rem;
             fill: var(--color-grey-dark-2);
-            margin-right: 1rem;
-
+            margin: auto 1rem;
         }
-
-        &_name {}
     }
 }
 
