--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1,20 +1,3 @@
-/*
-COLORS
-
-Primary: #eb2f64
-Primary light: #FF3366
-Primary dark: #BA265D
-
-Grey light 1: #faf9f9
-Grey light 2: #f4f2f2
-Grey light 3: #f0eeee
-Grey light 4: #ccc
-
-Grey dark 1: #333
-Grey dark 2: #777
-Grey dark 3: #999
-
-*/
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -139,7 +122,8 @@ body {
   flex: 0 0 40%;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  position: relative; }
   @media only screen and (max-width: 31.25em) {
     .search {
       order: 1;
@@ -190,6 +174,8 @@ body {
   align-items: center;
   align-self: stretch;
   color: var(--color-grey-dark-2); }
+  .user-nav__user {
+    position: relative; }
   .user-nav__icon-box, .user-nav__user {
     padding: 0 2rem;
     cursor: pointer;
@@ -216,9 +202,13 @@ body {
     right: 1.1rem;
     display: flex;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    transition: all .15s; }
+  .user-nav__icon-box:hover .user-nav__notifications {
+    transform: scale(1.16);
+    background-color: var(--color-primary-light); }
   .user-nav__user-photo {
-    height: 4rem;
+    height: 5rem;
     border-radius: 50%;
     margin-right: 1rem; }
 
@@ -245,7 +235,7 @@ body {
       @media only screen and (max-width: 56.25em) {
         .side-nav__item:not(:last-child) {
           margin: 0;
-          border-right: 1px solid var(--color-grey-dark-3); } }
+          border-right: 0.5px solid var(--color-grey-dark-3); } }
     @media only screen and (max-width: 56.25em) {
       .side-nav__item {
         flex: 1; } }
@@ -546,3 +536,186 @@ body {
     .cta__btn:focus {
       outline: none;
       animation: 1s pulsate infinite; }
+
+.suggestion {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 90%;
+  transform: translate(-50%, 0);
+  color: var(--color-grey-dark-2);
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  max-height: 36rem;
+  overflow-y: scroll;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s; }
+  .suggestion__item {
+    display: flex;
+    align-items: center;
+    padding: 1rem 1rem;
+    cursor: pointer; }
+    .suggestion__item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
+    .suggestion__item:hover {
+      background-color: var(--color-grey-light-1); }
+  .suggestion__photo-box {
+    border-radius: 50%;
+    overflow: hidden;
+    width: 8rem;
+    height: 8rem;
+    display: flex;
+    justify-content: center;
+    margin-right: 1rem;
+    flex: 0 0 auto; }
+  .suggestion__photo {
+    height: 100%;
+    width: auto; }
+  .suggestion__info-box {
+    margin-right: auto; }
+  .suggestion__name {
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin-bottom: -.5rem; }
+  .suggestion__location {
+    font-size: 1.2rem;
+    font-weight: 300; }
+  .suggestion__stars {
+    height: 1.5rem;
+    width: 1.5rem; }
+  .suggestion__rating-average {
+    color: var(--color-primary);
+    font-size: 2.6rem;
+    font-weight: 300;
+    margin-left: 1rem; }
+
+.search__input:focus ~ .suggestion {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav__icon-box:active .user-nav_chat,
+.user-nav__icon-box:hover .user-nav_chat {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav__user:active .user-nav_profile,
+.user-nav__user:hover .user-nav_profile {
+  opacity: 1;
+  visibility: visible; }
+
+.user-nav_chat {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 90%;
+  transform: translate(-50%, 0);
+  color: var(--color-grey-dark-2);
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  max-height: 36rem;
+  overflow-y: scroll;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s;
+  width: 30rem;
+  max-height: 26rem; }
+  .user-nav_chat_head {
+    font-size: 1.8rem;
+    width: 100%;
+    text-align: center; }
+  .user-nav_chat_item {
+    display: flex;
+    align-items: center;
+    padding: 1rem 1rem;
+    cursor: pointer;
+    position: relative; }
+    .user-nav_chat_item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
+    .user-nav_chat_item:hover {
+      background-color: var(--color-grey-light-1); }
+    .user-nav_chat_item--highlighted::before {
+      content: "";
+      height: 100%;
+      width: 3px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: var(--color-primary-light); }
+  .user-nav_chat_photo {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
+  .user-nav_chat_info-box {
+    margin-right: auto; }
+  .user-nav_chat_name {
+    font-size: 1.4rem;
+    font-weight: 400; }
+  .user-nav_chat_preview {
+    font-size: 1.2rem;
+    font-weight: 300; }
+  .user-nav_chat_timestamp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 1rem; }
+
+.user-nav_profile {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 16rem;
+  background-color: #fff;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .2s;
+  max-height: none;
+  opacity: 0;
+  visibility: hidden; }
+  .user-nav_profile_header {
+    font-size: 1.8rem;
+    width: 100%;
+    text-align: center; }
+  .user-nav_profile_item-box {
+    font-size: 2rem;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 1.4rem;
+    font-weight: 400; }
+  .user-nav_profile_item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1rem 1rem;
+    cursor: pointer;
+    width: 100%; }
+    .user-nav_profile_item:not(:last-child) {
+      border-bottom: 1px solid var(--color-grey-light-3); }
+    .user-nav_profile_item:hover {
+      background-color: var(--color-grey-light-1); }
+  .user-nav_profile_link:link, .user-nav_profile_link:visited {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: var(--color-grey-dark-2); }
+  .user-nav_profile_icon {
+    width: 1.5rem;
+    height: 1.5rem;
+    fill: var(--color-grey-dark-2);
+    margin: auto 1rem; }
